# pgslice

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  DOCKER_USAGE.md  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker-publish.yml  lint.yml  release-finalize.yml  release.yml  tests.yml
dumps/: store_1_20251229_115627.sql
scripts/: bump_version.py
src/db_reverse_dump/: __main__.py  cli.py  config.py  repl.py
src/db_reverse_dump/cache/: schema_cache.py
src/db_reverse_dump/db/: connection.py  schema.py
src/db_reverse_dump/dumper/: sql_generator.py
src/db_reverse_dump/graph/: traverser.py
src/db_reverse_dump/utils/: exceptions.py  logging_config.py
src/pgslice/: cli.py  repl.py
src/pgslice/dumper/: ddl_generator.py  dump_service.py
src/pgslice/utils/: graph_visualizer.py
src/snippy/: __main__.py  cli.py  config.py  repl.py
src/snippy/cache/: schema_cache.py
src/snippy/db/: connection.py  schema.py
src/snippy/dumper/: dependency_sorter.py  sql_generator.py  writer.py
src/snippy/graph/: models.py  traverser.py  visited_tracker.py
src/snippy/utils/: exceptions.py  logging_config.py  security.py
src/tests/: conftest.py
src/tests/integration/: test_repl.py  test_schema.py
src/tests/test_data/: generate_large_dataset.py  schema.sql
src/tests/unit/: test_config.py  test_connection.py  test_exceptions.py  test_models.py  test_security.py  test_sql_generator.py  test_writer.py
tests/: __init__.py  conftest.py  factories.py  test_cli.py
tests/integration/: __init__.py  conftest.py  test_full_traversal.py  test_schema.py  test_traverser.py
tests/test_data/: generate_large_dataset.py  schema.sql
tests/unit/: __init__.py  test_cli.py  test_config.py  test_connection.py  test_dependency_sorter.py  test_exceptions.py  test_repl.py  test_security.py  test_sql_generator.py  test_visited_tracker.py
tests/unit/cache/: __init__.py  test_schema_cache.py
tests/unit/db/: __init__.py  test_connection.py  test_schema.py
tests/unit/dumper/: __init__.py  test_ddl_generator.py  test_dependency_sorter.py  test_sql_generator.py  test_writer.py
tests/unit/graph/: __init__.py  test_models.py  test_traverser.py  test_traverser_progress.py  test_visited_tracker.py
tests/unit/operations/: __init__.py  test_dump_ops.py  test_parsing.py  test_schema_ops.py
tests/unit/utils/: __init__.py  test_exceptions.py  test_graph_visualizer.py  test_logging_config.py  test_security.py  test_spinner.py
